# Apps

./: .gitignore  README.md  pyproject.toml  shell.nix
riceApp/: db.sqlite3  manage.py
riceApp/module/: api.py  models.py  urls.py  views.py
riceApp/module/Script/: frcast.py  regr.py
riceApp/module/dao/: consumptionController.py  stockController.py
riceApp/module/data/: Proyeksi1.csv  Proyeksi2.csv  Proyeksi3.csv
riceApp/module/migrations/: 0001_initial.py  0002_remove_stockrecord_datatype.py
riceApp/module/ml/: consumptionPredictor.py  stockPredictor.py
riceApp/module/static/plugins/datatables/css/: datatables.css  datatables.min.css
riceApp/module/static/plugins/datatables/js/DataTables/: datatables.min.js
riceApp/module/templates/: home.html  index.html
riceApp/module/templates/layouts/: main_layout.html
riceApp/module/templates/pages/: dashboard.html
riceApp/riceApp/: asgi.py  settings.py  urls.py  wsgi.py
